--- a/Portfolio.html
+++ b/Portfolio.html
@@ -50,7 +50,7 @@ h4 {
     <section>
         <h2>About Me</h2> 
 <h3>Seshi Reddy Guda</h3> <br>
-<img src="https://raw.githubusercontent.com/SeshiReddyGuda/Seshi-Reddy-Guda.github.io./main/Image%20-%201.jpg" alt="Seshi Reddy Guda">
+<img src="https://github.com/SeshiReddyGuda/Seshi-Reddy-Guda.github.io./blob/main/Image%20-%201.jpg?raw=true" alt="Seshi Reddy Guda">
         <h3>4x Certified Salesforce Professional at Leslie's Poolmart Inc.</h3>
         <p>I have demonstrated analytical, interpersonal, and problem-solving skills with the ability to effectively communicate technical information verbally and in writing. I also possess excellent organizational and analytical abilities. My strengths include planning and attention-to-detail coupled with the ability to work under pressure, follow directions, or self-manage and prioritize tasks efficiently. The combination of my technical knowledge and communication abilities enables me to achieve success in all tasks and challenges I may be presented with within my workplace environment.
 <br> <br>
