--- a/Portfolio.html
+++ b/Portfolio.html
@@ -127,7 +127,7 @@ h4 {
     </section>
 
 <section>
-        <h2>Achievements</h2>
+        <h2>Publications</h2>
         <ul>
 <li> Guda, Seshi Reddy, "Evaluation of Email Spam Detection Techniques" (2022). <i> Culminating Projects in Information Assurance. </i> 125.
 https://repository.stcloudstate.edu/msia_etds/125 </li>
