--- a/Portfolio.html
+++ b/Portfolio.html
@@ -125,7 +125,10 @@ h4 {
 <li> Vardhaman College of Engineering University: 2015 – Bachelor of Science, Electronics and Communication Engineering, 7.5 GPA </li>
 </ul>
     </section>
-
+<section>
+    <h2>Technical Skills</h2>
+<h4>Salesforce CRM, Workflow, flows, and Approval processes, Reports and Dashboards, Analytic Snapshots, Custom and Standard Objects optimization, Data analysis, Data Loader, Integrations, App Exchange, Classes/Controllers, Apex, Triggers, SOQL, SOSL, Visualforce pages/Components, Web services.</h4>
+</section>
 <section>
         <h2>Publications</h2>
         <ul>
